# parallel_decoder

./: LICENSE  README.md  pyproject.toml
data/: global_vs_parallel_0.csv  global_vs_parallel_1.csv
notebook/: lattice-windows.ipynb  notebook.ipynb
src/: lattice.py  main.py  noise.py  notebook.ipynb  plots.py  requirements.txt  utils.py
src/data/: global_vs_parallel_2.csv  global_vs_parallel_3.csv  global_vs_parallel_4.csv
src/decoders/: __init__.py  window.py  window_decoder.py
