[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "parallel_decoder"
version = "0.1.0"
description = "Parallel window decoder utilities built on stim and pymatching."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Cody Lepp" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Physics",
  "Intended Audience :: Science/Research"
]
dependencies = [
  "stim>=1.12.0",
  "pymatching>=2.3.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "scipy>=1.10.0"
]

[project.optional-dependencies]
notebook = [
  "jupyter>=1.0.0",
  "notebook>=7.0.0",
  "ipykernel>=6.25.0"
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
include = ["parallel_decoder*"]
